Fix bug on mobile browser
Remove a height setting to make things go well.

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -103,7 +103,6 @@
   -ms-flex-direction: row;
   padding-left: 60px;
   padding-right: 30px;
-  height: 400px;
   flex-direction: row;
   /* background-color: #2e3450; V1(original) */
   background-color: #d9d9d9; /* Light Gray */
